--- a/static/javascript/app/components/content/registerView.html
+++ b/static/javascript/app/components/content/registerView.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Verification code</label>
+                    <label class="col-sm-2 control-label">Invitation code</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" placeholder="Code" ng-model="code">
                     </div>
