--- a/static/javascript/app/components/content/userinfoView.html
+++ b/static/javascript/app/components/content/userinfoView.html
@@ -1,8 +1,47 @@
 <div ng-controller="userinfoCtrl">
-  <main class="col-md-3 main-content" ng-show="userinfoShow">
+  <main class="col-md-3 main-content">
     <div class="panel panel-default">
       <div class="panel-body">
         Hello, {{ data.UserDisplayName }}
+          <br/>
+        <div ng-show="data.Projects.length === 0">
+          You don't have any project.
+          <br/>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".create-project-modal-lg">Create a new one?</button>
+
+          <div class="modal fade create-project-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title">Create a new project</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="form-group">
+                    <label> Project Name </label>
+                    <input type="text" class="form-control" ng-model="newProjectDisplayName"/>
+                  </div>
+                  <div class="form-group">
+                    <label> Remark </label>
+                    <input type="text" class="form-control" ng-model="newProjectRemark"/>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary" ng-click="newProjectOnClick(newProjectDisplayName, newProjectRemark)">Submit</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div ng-show="data.Projects.length > 0">
+          <ul class="nav nav-pills nav-stacked">
+              <li role="presentation" ng-repeat="project in data.Projects" ng-class="{active : data.activeProject === project.ProjectId }">
+                <a href="javascript:void(0)">{{ project.ProjectName }}</a>
+              </li>
+          </ul>
+        </div>
       </div>
     </div>
   </main>
